# RAGify

./: .gitignore  BaseCharSplitter.py  Dockerfile  README.md  app.py  base_vis.py  commondata.py  docker-compose.yml  ingestion_pipeline.py  pyproject.toml  requirements-minimal.txt  requirements.txt  yc-request-for-startups.json
.huggingface/: README.md
pages/: 1_tokenizer.py  2a_SPLITTER_CHAR.py  2b_REC_CHAR_SPLITTER.py
pages/1_tokenizer/: tokenizer.py
pages/2_splitters/: chara.py  md_text.py  pdf.py  rec_char.py
pages/3_chunk/: basic.py  title.py
pages/3_chunk/lang/: BaseChunker.py  fixed.py  recursive.py  semantic.py
pages/4_image_summarizer/: image_sum.py
pages/5_embed/: embed_vis.py  embedder.py
pages/final/: final.py  retrieve.py
pages/splitters/: BaseCharSplitter.py  REC_CHAR.py
