[project]
name = "ragify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "llama-index>=0.12.52",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "streamlit[pdf]>=1.50.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unstructured[all-docs]>=0.18.15",
    "watchdog>=6.0.0",
]
